tests/ui/smc_error_non_exhaustive.stderr
error[E0004]: non-exhaustive patterns: `_` not covered
 --> tests/ui/smc_error_non_exhaustive.rs:20:11
  |
 20 |     match err {
    |           ^^^ pattern `_` not covered
    |
note: `SmcError` defined here
   --> src/smc/ffi.rs
    |
    | pub enum SmcError {
    | ^^^^^^^^^^^^^^^^^
    = note: the matched value is of type `SmcError`
    = note: `SmcError` is marked as non-exhaustive, so a wildcard `_` is necessary to match exhaustively
help: ensure that all possible cases are being handled by adding a match arm with a wildcard pattern or an explicit pattern as shown
    |
 21 ~         SmcError::ServiceNotFound => {},
 22 +         _ => todo!()
    |
